//
// This source file is part of the CardinalKit open-source project
//
// SPDX-FileCopyrightText: 2022 Stanford University and the project authors (see CONTRIBUTORS.md)
//
// SPDX-License-Identifier: MIT
//

// MARK: - General Views
"LOGIN" = "Login";
"SIGN_UP" = "Sign Up";

// MARK: - Username Password

// Login
"UAP_LOGIN_BUTTON_TITLE" = "Username and Password";
"UAP_LOGIN_NAVIGATION_TITLE" = "Login";
"UAP_LOGIN_USERNAME_TITLE" = "Username";
"UAP_LOGIN_USERNAME_PLACEHOLDER" = "Enter your username ...";
"UAP_LOGIN_PASSWORD_TITLE" = "Password";
"UAP_LOGIN_PASSWORD_PLACEHOLDER" = "Enter your password ...";
"UAP_LOGIN_ACTION_BUTTON_TITLE" = "Login";
"UAP_LOGIN_FAILED_DEFAULT_ERROR" = "Could not login";

// SignUp
"UAP_SIGNUP_BUTTION_TITLE" = "Username and Password";
"UAP_SIGNUP_NAVIGATION_TITLE" = "Sign Up";
"UAP_SIGNUP_USERNAME_TITLE" = "Username";
"UAP_SIGNUP_USERNAME_PLACEHOLDER" = "Enter your username ...";
"UAP_SIGNUP_PASSWORD_TITLE" = "Password";
"UAP_SIGNUP_PASSWORD_PLACEHOLDER" = "Enter your password ...";
"UAP_SIGNUP_PASSWORD_REPEAT_TITLE" = "Repeat
Password";
"UAP_SIGNUP_PASSWORD_REPEAT_PLACEHOLDER" = "Repeat your password ...";
"UAP_SIGNUP_PASSWORD_NOT_EQUAL_ERROR" = "The entered passwords are not equal.";
"UAP_SIGNUP_GIVEN_NAME_TITLE" = "First Name";
"UAP_SIGNUP_GIVEN_NAME_PLACEHOLDER" = "Enter your first name ...";
"UAP_SIGNUP_FAMILY_NAME_TITLE" = "Last Name";
"UAP_SIGNUP_FAMILY_NAME_PLACEHOLDER" = "Enter your last name ...";
"UAP_SIGNUP_GENDER_IDENTITY_TITLE" = "Gender Identity";
"UAP_SIGNUP_DATE_OF_BIRTH_TITLE" = "Date of Birth";
"UAP_SIGNUP_ACTION_BUTTON_TITLE" = "Sign Up";
"UAP_SIGNUP_FAILED_DEFAULT_ERROR" = "Could not sign up";


// Reset
"UAP_RESET_PASSWORD_BUTTON_TITLE" = "Forgot Password?";
"UAP_RESET_PASSWORD_NAVIGATION_TITLE" = "Forgot Password";
"UAP_RESET_PASSWORD_USERNAME_TITLE" = "Username";
"UAP_RESET_PASSWORD_USERNAME_PLACEHOLDER" = "Enter your username ...";
"UAP_RESET_PASSWORD_ACTION_BUTTON_TITLE" = "Reset Password";
"UAP_RESET_PASSWORD_PROCESS_SUCCESSFUL_LABEL" = "Sent out a link to reset the password.";
"UAP_RESET_PASSWORD_FAILED_DEFAULT_ERROR" = "Could not reset the password";


// MARK: - Email and Password
"EAP_LOGIN_BUTTON_TITLE" = "Email and Password";
"EAP_SIGNUP_BUTTON_TITLE" = "Email and Password";
"EAP_LOGIN_USERNAME_TITLE" = "Email";
"EAP_LOGIN_USERNAME_PLACEHOLDER" = "Enter your email ...";
"EAP_EMAIL_VERIFICATION_ERROR" = "The entered email is not correct.";


// MARK: - Gender Identity
"GENDER_IDENTITY_FEMALE" = "Female";
"GENDER_IDENTITY_MALE" = "Male";
"GENDER_IDENTITY_TRANSGENDER" = "Transgender";
"GENDER_IDENTITY_NON_BINARY" = "Non-binary";
"GENDER_IDENTITY_PREFER_NOT_TO_STATE" = "Choose not to answer";
