...

/// Displays a sign up view allowing a user to sign up using a username, password, and additional context.
///
/// Enables ``AccountService``s such as the ``UsernamePasswordAccountService`` to
/// display a user interface allowing users to sign up with a username and password.
///
/// The ``SignUp``  view automatically displays sign up buttons of all configured ``AccountService``s and is the recommended way to automatically constuct a sign up flow for different ``AccountService``s.
///
/// Nevertheless, the ``UsernamePasswordSignUpView`` can also be used to display the sign up view in a custom sign up flow.
/// Applications must ensure that an ``UsernamePasswordAccountService`` instance is injected in the SwiftUI environment by, e.g., using the `.environmentObject(_:)` view modifier.
///
/// The view can automatically validate input using passed in ``ValidationRule``s and can be customized using header or footer views:
/// ```swift
...
