...
                .background(Color(.systemBackground))
                .colorScheme(.dark)
            UserProfileView(
                name: PersonNameComponents(givenName: "Vishnu", familyName: "Ravi"),
                imageLoader: {
                    try? await Task.sleep(for: .seconds(2))
                    return Image(systemName: "person.crop.artframe")
                }
            )
                .frame(width: 50, height: 100)
                .shadow(radius: 4)
                .padding()
        }
...
